update schedule, pricelist and info block

--- a/schedule.html
+++ b/schedule.html
@@ -183,9 +183,10 @@
 </tr>
 <tr>
 <td style="width:165px">
-<p><strong>Суббота/ Воскресенье</strong></p>
+<p><strong>Суббота/<br>Воскресенье</strong></p>
 </td>
 <td style="width:131px">
+<p>10.30-11.30</p>
 <p>11.30-12.30</p>
 <p>12.40-13.40</p>
 <p>13.50-14.50</p>
@@ -193,6 +194,7 @@
 <p>16.00-17.00</p>
 </td>
 <td style="width:163px">
+<p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
@@ -251,28 +253,6 @@
 </td>
 <td style="width:256px">
 <p>Машкова Г.А.</p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Суббота</strong></p>
-</td>
-<td style="width:256px">
-<p>10.30-11.30</p>
-</td>
-<td style="width:256px">
-<p>Котомцева Д.В.</p>
-</td>
-</tr>
-<tr>
-<td style="width:256px">
-<p><strong>Воскресенье</strong></p>
-</td>
-<td style="width:256px">
-<p>10.30-11.30</p>
-</td>
-<td style="width:256px">
-<p>Котомцева Д.В.</p>
 </td>
 </tr>
 </tbody>
@@ -339,7 +319,7 @@
 <p><strong>Среда</strong></p>
 </td>
 <td width="319">
-<p>16.00 &ndash; 17.00</p>
+<p>16.30 &ndash; 17.30</p>
 </td>
 <td width="319">
 <p><strong>прикладное плавание</strong></p>
@@ -426,7 +406,7 @@
 </td>
 <td width="319">
 <p>8.30 &ndash; 9.30 (спорт.зал)</p>
-<p>10.30 &ndash; 11.30 (вода)</p>
+<p>9.30 &ndash; 10.30 (вода)</p>
 </td>
 <td width="319">
 <p><strong>комплексная тренировка</strong><br>(младшая группа)</p>
@@ -434,8 +414,8 @@
 </tr>
 <tr>
 <td width="319">
-<p>11.30 &ndash; 12.30 (вода)</p>
-<p>12.30 &ndash; 13.30 (спорт.зал)</p>
+<p>10.30 &ndash; 11.30 (вода)</p>
+<p>11.30 &ndash; 12.30 (спорт.зал)</p>
 </td>
 <td width="319">
 <p><strong>комплексная тренировка</strong><br>(старшая группа)</p>
