--- a/pricelist.html
+++ b/pricelist.html
@@ -58,12 +58,13 @@
 		</div>
 	</div>
 	<div class="content block-top-shadow" style="min-height: 100%; padding:64px">
+		<p class="font-content-title">К оплате принимаются банковские карты</p>
 		<table style="border: solid 2px width;">
 			<tbody>
 				<tr>
 					<td colspan="6">
 						<p><strong>ПРЕЙСКУРАНТ ЦЕН</strong></p>
-						<p><strong>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы " ДЕЛЬФИН"</strong></p>
+						<p><strong>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы "ДЕЛЬФИН"</strong></p>
 					</td>
 				</tr>
 				<tr style="background-color: #b8c1df">
@@ -247,13 +248,13 @@
 						<p>Спортивно-оздоровительная секция для детей дошкольного возраста по водному поло (6-7 лет)</p>
 					</td>
 					<td>
-						<p>1 академ. час</p>
+						<p>1 академ. час<br>(прикладное плавание/ ОФП зал)</p>
 					</td>
 					<td >
-						<p>8</p>
+						<p>12</p>
 					</td>
 					<td>
-						<p>1 440</p>
+						<p>2 040</p>
 					</td>
 					<td colspan="2">
 						<p>-</p>
