--- a/index.html
+++ b/index.html
@@ -60,34 +60,11 @@
 					<p class="font-content-title">Объявление</p>
 				</div>
 				<div class="content-about-text-data">
-					<ul>
-					<li>
-						<p class="text">
-							Уважаемые родители!<br>
-							По вашим просьбам проводится дополнительный набор в детскую группу плавания (малая чаша бассейна).<br>
-							Тренер группы: Котомцева Джиллиана Вячеславовна.<br>
-							Занятия начнутся с <b>октября</b> по расписанию.<br><br>
-						</p>
-					</li>
-					<li>
-					<p class="text">
-						По всем интересующим вас вопросам вы можете обратиться<br>
-						к дежурному администратору в следующие часы работы:<br>
-						Понедельник: 14.00 -18.00<br>
-						Вторник: 10.00 - 19.00<br>
-						Среда: 10.00 - 19.00<br>
-						Четверг: 10.00 - 19.00<br>
-						Пятница: 10.00 - 19.00<br>
-						<b>обеденный перерыв 13.00 - 14.00</b><br><br>
-					</p>
-					</li><li><p class="text">
-					   Внимание, уважаемые родители!<br>
-					   Для записи детей (заключения договора) в группы «Спортивно-оздоровительное плавание» и «Водное поло»<br>
-					   требуются справки: допуск к занятиям в бассейне от педиатра с результатом на гельминты.<br>
-					   Без медицинского допуска договор не оформляется и запись ребенка  в группу не регистрируется!<br><br>
-					</p>
-					</li>
-				</ul>
+					<p class="text">Уважаемые посетители!<br>
+						С 31 декабря по 10 января занятия в бассейне не проводятся.<br>
+						Все группы начинают свою работу с 11 января<br>
+						по утвержденному расписанию.<br>
+						С Новым годом и Рождеством!
 				</div>
 		</div>
 		<div class="content-about paper-shadow">
