Change info block
index

--- a/index.html
+++ b/index.html
@@ -61,10 +61,8 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">Уважаемые посетители!<br>
-						С 31 декабря по 10 января занятия в бассейне не проводятся.<br>
-						Все группы начинают свою работу с 11 января<br>
-						по утвержденному расписанию.<br>
-						С Новым годом и Рождеством!
+					8 марта (воскресенье) бассейн не будет работать.<br>
+					С международным женским праздником!<br>
 					</p>
 				</div>
 		</div>
