--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">Уважаемые посетители!<br>
-					8 марта (воскресенье) бассейн не будет работать.<br>
-					С международным женским праздником!<br>
+					Работа бассейна приостановлена с 28 марта по 5 апреля.<br>
+					На основании распоряжения губернатора Омской области<br>
+					А.Л. Буркова №28-p от 27 марта 2020г.<br>
+					Информацию о дальнейшей работе бассейна<br>
+					можно уточнить 04.04.2020.<br>
 					</p>
 				</div>
 		</div>
