--- a/index.html
+++ b/index.html
@@ -61,11 +61,16 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">Уважаемые посетители!<br>
-					Работа бассейна приостановлена с 28 марта по 5 апреля.<br>
-					На основании распоряжения губернатора Омской области<br>
-					А.Л. Буркова №28-p от 27 марта 2020г.<br>
-					Информацию о дальнейшей работе бассейна<br>
-					можно уточнить 04.04.2020.<br>
+						Занятия начнутся с 1 сентября. Запись проходит по следующему расписанию:<br>
+						•	27 и 28 августа  с  15.00 до 20.00 (перерыв на дез.обработку 17.00-17.30)<br>
+						•	29 и 30 августа (сб., вс.) с 9.30 до 14.00 (перерыв на дез.обработку 11.30-12.00)<br><br>
+						Согласно распоряжению Губернатора Омской области        № 19-р от 25.03.2020,<br>
+						просим вас отнестись с пониманием и соблюдать все предписанные меры предосторожности при посещении школьного бассейна:<br> 
+						•	Запись в группы возможна в строго отведенное время по расписанию<br>
+						•	Вход без  индивидуальных средств защиты дыхательных путей (маски) запрещен<br>
+						•	Находясь на территории бассейна (запись в группу, заключения договоров) рекомендовано соблюдать дистанцию 1,5м.<br>
+						•	Каждому посетителю при входе в школьный бассейн проводится дистанционная термометрия и обработка рук дез.средстом.<br>
+						Мы очень хотим, чтобы вы сохранили и улучшили свое здоровье в нашем плавательном бассейне!<br>
 					</p>
 				</div>
 		</div>
