--- a/schedule.html
+++ b/schedule.html
@@ -110,8 +110,8 @@
 <p>Тесля А.В.</p>
 </td>
 <td style="width:136px">
-<p>16.00-17.00</p>
-<p>17.00-18.00</p>
+<p>15.40-16.40</p>
+<p>16.50-17.50</p>
 </td>
 <td style="width:172px">
 <p>Тесля А.В.</p>
@@ -125,6 +125,7 @@
 <td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
+<p>(с октября)</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
@@ -144,18 +145,20 @@
 <td style="width:131px">
 <p>15.50-16.50</p>
 <p>17.00-18.00</p>
-<p>18.00-19.00</p>
-<p>19.05-20.05</p>
+<p>(с октября)</p>
+<p>18.10-19.10</p>
+<p>19.20-20.20</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
+<p></p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
 <td style="width:136px">
-<p>16.00-17.00</p>
-<p>17.00-18.00</p>
+<p>15.40-16.40</p>
+<p>16.50-17.50</p>
 </td>
 <td style="width:172px">
 <p>Тесля А.В.</p>
@@ -169,6 +172,7 @@
 <td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
+<p>(с октября)</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
@@ -186,12 +190,11 @@
 <p><strong>Суббота/<br>Воскресенье</strong></p>
 </td>
 <td style="width:131px">
-<p>10.30-11.30</p>
 <p>11.30-12.30</p>
 <p>12.40-13.40</p>
 <p>13.50-14.50</p>
 <p>15.00-16.00</p>
-<p>16.00-17.00</p>
+<p>16.10-17.10</p>
 </td>
 <td style="width:163px">
 <p>Котомцева Д.В.</p>
@@ -202,7 +205,7 @@
 <p>Котомцева Д.В.</p>
 </td>
 <td style="width:136px">
-<p>11.45-12.45</p>
+<p>11.40-12.40</p>
 <p>12.50-13.50</p>
 <p>15.00-16.00</p>
 <p>16.10-17.10</p>
@@ -235,10 +238,10 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Вторник</strong></p>
+<p><strong>Четверг</strong></p>
 </td>
 <td style="width:256px">
-<p>12.00-13.00</p>
+<p>18.00-19.00</p>
 </td>
 <td style="width:256px">
 <p>Машкова Г.А.</p>
@@ -246,10 +249,21 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Четверг</strong></p>
+<p><strong>Суббота</strong></p>
 </td>
 <td style="width:256px">
-<p>12.00-13.00</p>
+<p>18.30-19.30</p>
+</td>
+<td style="width:256px">
+<p>Машкова Г.А.</p>
+</td>
+</tr>
+<tr>
+<td style="width:256px">
+<p><strong>Воскресенье (с окт.)</strong></p>
+</td>
+<td style="width:256px">
+<p>18.30-19.30</p>
 </td>
 <td style="width:256px">
 <p>Машкова Г.А.</p>
@@ -307,7 +321,7 @@
 </tr>
 <tr>
 <td width="319">
-<p>19.15 &ndash; 20.15</p>
+<p>18.00 &ndash; 19.00</p>
 </td>
 <td width="319">
 <p><strong><em>дошкольная</em></strong></p>
@@ -315,7 +329,7 @@
 </td>
 </tr>
 <tr>
-<td rowspan="2" width="222">
+<td rowspan="1" width="222">
 <p><strong>Среда</strong></p>
 </td>
 <td width="319">
@@ -325,14 +339,14 @@
 <p><strong>прикладное плавание</strong></p>
 </td>
 </tr>
-<tr>
+<!-- <tr>
 <td width="319">
 <p>19.15 &ndash; 20.15</p>
 </td>
 <td width="319">
 <p><strong><em>дошкольная </em></strong>(м/чаша)</p>
 </td>
-</tr>
+</tr> -->
 <tr>
 <td rowspan="2" width="222">
 <p><strong>Четверг</strong></p>
@@ -353,7 +367,7 @@
 </td>
 </tr>
 <tr>
-<td rowspan="3" width="222">
+<td rowspan="1" width="222">
 <p><strong>Пятница</strong></p>
 </td>
 <td width="319">
@@ -363,7 +377,7 @@
 <p><strong>прикладное плавание</strong></p>
 </td>
 </tr>
-<tr>
+<!-- <tr>
 <td width="319">
 <p>19.15 &ndash; 20.15</p>
 </td>
@@ -378,14 +392,14 @@
 <td width="319">
 <p><strong>прикладное плавание</strong></p>
 </td>
-</tr>
+</tr> -->
 <tr>
 <td rowspan="2" width="222">
 <p><strong>Суббота</strong></p>
 </td>
 <td width="319">
-<p>16.00 &ndash; 17.00 (спорт.зал)</p>
-<p>17.00 &ndash; 18.00 (вода)</p>
+<p>16.20 &ndash; 17.20 (спорт.зал)</p>
+<p>17.20 &ndash; 18.20 (вода)</p>
 </td>
 <td width="319">
 <p><strong>комплексная тренировка</strong></p>
@@ -393,8 +407,8 @@
 </tr>
 <tr>
 <td width="319">
-<p>18.00 &ndash; 19.00 (спорт.зал)</p>
-<p>19.00 &ndash; 20.00 (вода)</p>
+<p>18.30 &ndash; 19.30 (спорт.зал)</p>
+<p>19.40 &ndash; 20.40 (вода)</p>
 </td>
 <td width="319">
 <p><strong>комплексная тренировка</strong></p>
@@ -445,7 +459,7 @@
 <p><strong>Вторник</strong></p>
 </td>
 <td style="width:256px">
-<p>19.00-20.30</p>
+<p>19.10-20.40</p>
 </td>
 <td style="width:256px">
 <p>Криницкая Т.А.</p>
@@ -453,10 +467,10 @@
 </tr>
 <tr>
 <td style="width:256px">
-<p><strong>Среда</strong></p>
+<p><strong>Среда (с окт.)</strong></p>
 </td>
 <td style="width:256px">
-<p>18.30-20.00</p>
+<p>19.00-20.30</p>
 </td>
 <td style="width:256px">
 <p>Криницкая Т.А.</p>
@@ -478,7 +492,7 @@
 <p><strong>Суббота</strong></p>
 </td>
 <td style="width:256px">
-<p>10.30-12.00</p>
+<p>10.00-11.30</p>
 </td>
 <td style="width:256px">
 <p>Криницкая Т.А.</p>
