--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 				<div class="content-about-text-data">
 					<p class="text">Уважаемые посетители!<br>
 						Обновлено расписание занятий.<br>
+						Работа группы "Мать и дитя" временно приостановлена.<br><br>
 						Согласно распоряжению Губернатора Омской области        № 19-р от 25.03.2020,<br>
 						просим вас отнестись с пониманием и соблюдать все предписанные меры<br>предосторожности при посещении школьного бассейна:<br> 
 						1. Запись в группы возможна в строго отведенное время по расписанию<br>
