--- a/index.html
+++ b/index.html
@@ -61,15 +61,19 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">Уважаемые посетители!<br>
-						Обновлено расписание занятий.<br>
-						Работа группы "Мать и дитя" временно приостановлена.<br><br>
-						Согласно распоряжению Губернатора Омской области        № 19-р от 25.03.2020,<br>
-						просим вас отнестись с пониманием и соблюдать все предписанные меры<br>предосторожности при посещении школьного бассейна:<br> 
-						1. Запись в группы возможна в строго отведенное время по расписанию<br>
-						2. Вход без  индивидуальных средств защиты дыхательных путей (маски) запрещен<br>
-						3. Находясь на территории бассейна (запись в группу, заключения договоров)<br>рекомендовано соблюдать дистанцию 1,5м.<br>
-						4. Каждому посетителю при входе в школьный бассейн проводится дистанционная термометрия и обработка рук дез.средстом.<br>
-						Мы очень хотим, чтобы вы сохранили и улучшили свое здоровье в нашем плавательном бассейне!<br>
+					Запись в группы спортивно-оздоровительного плавания для детей и водное поло проводится в
+					бассейне с 25 августа в часы работы дежурного администратора бассейна:<br>
+					25, 26, 27 августа с 14.30 до 19.30<br>
+					28, 29 августа с 10.00 до 15.00<br>
+					30, 31 августа с 14.30 до 19.30<br>
+					1 сентября с 09.00 до 14.00<br>
+					2 сентября 14.30 до 19.30<br><br>
+					Для записи в группу (заключения договора на услугу) необходимо личное присутствие взрослого,
+					ответственного за несовершеннолетнего ребенка, наличие паспорта для заключения договора
+					медицинской справки с допуском от педиатра. Внимание, детям до 11 лет необходимо
+					предоставить результат (копию) анализа на гельминты.<br><br>
+					Вся дополнительная информация по телефону 55-06-70 в указанные часы работы дежурного
+					администратора бассейна.
 					</p>
 				</div>
 		</div>
