--- a/index.html
+++ b/index.html
@@ -60,20 +60,23 @@
 					<p class="font-content-title">Объявление</p>
 				</div>
 				<div class="content-about-text-data">
-					<p class="text">Уважаемые посетители!<br>
-					Запись в группы спортивно-оздоровительного плавания для детей и водное поло проводится в
-					бассейне с 25 августа в часы работы дежурного администратора бассейна:<br>
-					25, 26, 27 августа с 14.30 до 19.30<br>
-					28, 29 августа с 10.00 до 15.00<br>
-					30, 31 августа с 14.30 до 19.30<br>
-					1 сентября с 09.00 до 14.00<br>
-					2 сентября 14.30 до 19.30<br><br>
-					Для записи в группу (заключения договора на услугу) необходимо личное присутствие взрослого,
-					ответственного за несовершеннолетнего ребенка, наличие паспорта для заключения договора
-					медицинской справки с допуском от педиатра. Внимание, детям до 11 лет необходимо
-					предоставить результат (копию) анализа на гельминты.<br><br>
-					Вся дополнительная информация по телефону 55-06-70 в указанные часы работы дежурного
-					администратора бассейна.
+					<p class="text">Уважаемые посетители!<br> <br>
+					На основании распоряжения
+					губернатора Омской области<br> 
+					от 27.10.2021г. № 136-р с 30.10.2021г.
+					введены ограничения  на посещение<br>
+					бассейнов города для граждан старше
+					18 лет  без QR-кода сертификата<br>
+					вакцинации от COVID-19 или справки о
+					перенесенном заболевании<br> новой
+					короновирусной инфекцией  в последние
+					полгода.<br> 
+					Посетители могут предъявить
+					официальный медотвод от вакцинации
+					вместе с отрицательным ПЦР-тестом, со
+					дня проведения которого
+					не прошло боле 3-х
+					календарных дней.
 					</p>
 				</div>
 		</div>
