upd info, work with new

--- a/index.html
+++ b/index.html
@@ -60,23 +60,11 @@
 					<p class="font-content-title">Объявление</p>
 				</div>
 				<div class="content-about-text-data">
-					<p class="text">Уважаемые посетители!<br> <br>
-					На основании распоряжения
-					губернатора Омской области<br> 
-					от 27.10.2021г. № 136-р с 30.10.2021г.
-					введены ограничения  на посещение<br>
-					бассейнов города для граждан старше
-					18 лет  без QR-кода сертификата<br>
-					вакцинации от COVID-19 или справки о
-					перенесенном заболевании<br> новой
-					короновирусной инфекцией  в последние
-					полгода.<br> 
-					Посетители могут предъявить
-					официальный медотвод от вакцинации
-					вместе с отрицательным ПЦР-тестом, со
-					дня проведения которого
-					не прошло боле 3-х
-					календарных дней.
+					<p class="text">Уважаемые посетители!<br>
+						Информация на данном сайте пока неактуальна.<br>
+						Расписание и цены можно уточнить по номеру телефона бассейна.<br>
+						Ведутся технические работы.<br>
+						Приносим свои извинения.
 					</p>
 				</div>
 		</div>
