--- a/new/info_rules.html
+++ b/new/info_rules.html
@@ -22,7 +22,7 @@
 				Почта: <a href="mailto:aquafitness@bk.ru">aquafitness@bk.ru</a><span>
 			</div>
 			<div class="map">
-				<a href="https://2gis.ru/omsk/firm/282003257688243%2C73.324095%2C54.93391?queryState=center%2F73.32549%2C54.93351%2Fzoom%2F17">
+				<a href="https://go.2gis.com/vvr7n">
 					<div></div>
 				</a>
 			</div>
